# meeting-agent

./: .env_example  .gitignore  README.md  docker-compose.yaml  mcp_config_example.json  meeting_agent_entrypoint.sh  pyproject.toml  requirements.txt  worker_main.py
Dockerfiles/connection_manager/: Dockerfile
Dockerfiles/frontend/: Dockerfile
Dockerfiles/meeting_agent/: Dockerfile
connection_manager/: __init__.py  docker_manager.py  main.py  schemas.py  settings.py
connection_manager/agent/: meeting_manager.py  tools.py
frontend/: .env.local.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ChatBubble.tsx  ChatView.tsx  Header.tsx  MessageInput.tsx  ProgressIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
meeting_agent/: gm_helper.py  gm_login.py  gm_manager.py  live_assistant.py  mcp_client.py  mcp_pyautogui.py  schemas.py  settings.py
wireplumber/: restore-stream
